--- a/prescript/templates/rx/drug.html
+++ b/prescript/templates/rx/drug.html
@@ -55,7 +55,7 @@ var map_url = "{% static 'rx/image/map-uk.png' %}",
 
 <div id="interactive">
 	<div id="viz_title_div">
-	<h4>100 Prescriptions<span class="info" id="i100">?</span></h4>	
+	<h4>100 Prescriptions<span class="info" id="i100"><img src="{% static 'rx/image/i.png' %}" ></span></h4>	
 	</div>
 <script type="text/javascript" src="{% static 'rx/js/pill_graph.js' %}"></script>
 </div>
