--- a/prescript/static/rx/css/drug_page.css
+++ b/prescript/static/rx/css/drug_page.css
@@ -70,12 +70,7 @@
 	stroke:white;
 	stroke-opacity:.1;
 	text-anchor:left;
-
 }
-
-
-
-
 
 .vizdate{
 
@@ -146,7 +141,7 @@ tr.even{
 }
 
 #top_table th {
-	font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+	font-family: 'Lora', "Times New Roman", serif;
 	font-size: 18px;
 	vertical-align: bottom;
 	padding:5px 5px;
@@ -155,6 +150,20 @@ tr.even{
 	border-bottom:medium solid #000000;
 
 }
+
+#top_table .table_prac{
+	font-size: 24px;
+	font-weight: 500;
+}
+#top_table .table_prescript{
+
+}
+
+#top_table .table_hed_sub{
+	font-size: 10px;
+	color:#444;
+}
+
 #top_table td {
 	font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
 	font-size: 14px;
@@ -170,7 +179,7 @@ tr.even{
 }
 
 .info{
-	font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+	font-family: "Times New Roman", serif;
 	font-size: 18px;
 	color:black;
 	vertical-align: super;
@@ -183,9 +192,267 @@ tr.even{
 	text-decoration: underline;
 	color:red;
 }
-.help_dialogue{
-	text-align: left;
-	font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
-	font-size: 18px;
 
+.smallint{
+	font-size: 20px;
+	font-weight: bold;
+}
+
+#bigint{
+	float:left;
+	font-family: 'Lora', "Times New Roman", serif;
+	font-size: 92px;
+	color:darkred;
+	font-weight: bold;
+	
+	margin:0px 15px;
+	padding:0px 10px;
+}
+
+
+/* Deprivation Chart */
+.chart{
+	margin-top: 5px;
+}
+.chart rect {
+  fill: steelblue;
+}
+.chart rect:hover {
+  fill: darkred;
+}
+
+
+
+.fact_block{
+
+}
+
+.text_block{
+	margin:0 auto;
+	display:table;
+	font-family: "Times New Roman", serif;
+}
+
+
+
+.deprive_div{
+	margin:0 auto;
+	width:280px;
+	clear:left;
+	float:left;
+	border:3px solid #DC572E;
+	border-radius: 5px;
+	margin:5px;
+	text-align:center;
+}
+.deprive_div h5{
+	margin-bottom: 0px;
+	padding:2px;
+	background-color: #DC572E;
+	color:white;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-weight: 900;
+}
+
+.fatal_div{
+	width:190px;
+	font-family: "Times New Roman", serif;
+	color: darkred;
+	font-size: 26px;
+	text-align: center;
+	float:left;
+	border:3px solid #0A5BC4;
+	border-radius: 5px;
+	margin:5px;
+}
+
+.fatal_div h5{
+	margin-bottom: -5px;
+	padding-bottom: 0px;
+	background-color: #0A5BC4;
+	color:white;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-weight: 900;
+}
+.fatal_sub{
+	font-family: sans-serif;
+	font-size: 12px;
+	margin-bottom: 25px;
+	padding-top:0px;
+	color:black;
+}
+
+.top_rx{
+	clear:left;
+}
+
+.dep_chart_bar {
+  fill: white;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 12px;
+  text-anchor: end;
+}
+.dep_chart_lab{
+  fill: black;
+  font-family: "Times New Roman", serif;
+  font-size: 17px;
+  text-anchor: end;
+  text-decoration: underline;
+}
+.deprive_sub{
+	font-family: sans-serif;
+	font-size: 12px;
+	margin-bottom: 25px;
+	padding-top:0px;
+}
+
+
+
+
+/* Fatality Chart */
+.fatal_div g{
+  font: 10px sans-serif;
+}
+
+.fatal_div .axis path,
+.fatal_div .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.fatal_div .x.axis path {
+  display:none ;
+}
+
+.fatal_div .line {
+  fill: none;
+  stroke: darkred;
+  stroke-width: 1.5px;
+}
+
+.sub_label{
+	font-size: 12px;
+}
+.sub_source{
+	font-family: Arial, sans-serif;
+	font-size: 9px;
+	color:grey;
+	padding-left: 10px;
+}
+
+
+.overlay {
+  fill: none;
+  pointer-events: all;
+}
+
+.focus circle {
+  fill: none;
+  stroke: black;
+  stroke-width:2px;
+}
+
+#uses{
+	font-size: 18px;
+	width:260px;
+	float:left;
+	border:3px solid #2D652B;
+	border-radius: 5px;
+	font-family: arial,sans-serif;
+	color:black;	
+	margin:5px;
+}
+#uses h5{
+	background-color: #2D652B;
+	color:white;
+	margin:0px;
+	padding:0px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-weight: 900;
+}
+
+#uses ul{
+	list-style: square inside none;
+	padding-left: 20px;
+	
+}
+#warnings{
+	width:270px;
+	float:left;
+	border:3px solid #BF1E4B;
+	border-radius: 5px;
+	margin:5px;
+}
+#warnings h5{
+	background-color: #BF1E4B;
+	color:white;
+	margin:0px;
+	padding:0px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-weight: 900;
+}
+
+#warnings p{
+	font-size: 16px;
+	padding-bottom: 0px;
+	font-family: arial, sans-serif;
+}
+
+#popular{
+	width:250px;
+	float:left;
+	border:3px solid #00A0B1;
+	border-radius: 5px;
+	margin:5px;
+}
+#popular h5{
+	background-color: #00A0B1;
+	color:white;
+	margin:0px;
+	padding:0px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-weight: 900;
+}
+#popular .lab_pad{
+	font-size: 16px;
+	padding-bottom: 0px;
+	text-align:center;
+	font-family: arial, sans-serif;
+}
+
+.small_bigint{
+	font-family: "Lora", "Times New Roman", sans-serif;
+	font-size: 34px;
+	color:darkred;
+	font-weight: 900;
+}
+.pop_text{
+	color:#555;
+	font-size: 12px;
+}
+
+
+.aka{
+	font-family: arial,sans-serif;
+	font-size: 14px;
+	color:#555555;
+	padding:2px 20px;
+}
+
+#page_title_banner h1{
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+}
+#page_title_banner{
+	margin-bottom: 20px;
+}
+
+.lab_pad{
+	margin:5px 15px;
 }
