--- a/prescript/templates/rx/drug.html
+++ b/prescript/templates/rx/drug.html
@@ -33,6 +33,9 @@ var map_url = "{% static 'rx/image/map-uk.png' %}",
 
 
 <div id="text_main">
+
+
+
 <div id="page_title_banner">	
 	<h1>{{drug_detail.chem_name}}</h1>
 	<span class="aka">
@@ -63,7 +66,7 @@ var map_url = "{% static 'rx/image/map-uk.png' %}",
 </div>
 
 
-<hr class="styled_hr">
+<hr class="styled_hr"> 
 <h3>100 Prescriptions</h3>
 <div id="bigint">
 {{nir_rx_prob|percentize}}
@@ -255,5 +258,7 @@ var map_url = "{% static 'rx/image/map-uk.png' %}",
 
 
 </div>
+
+<img style="width: 100px; float:left;" src="{% static 'rx/image/blue pills.png' %}">
 
 {% endblock %}
