--- a/prescript/templates/rx/drug.html
+++ b/prescript/templates/rx/drug.html
@@ -113,7 +113,7 @@ var map_url = "{% static 'rx/image/map-uk.png' %}",
 	<div class="lab_pad">
 	{{drug_stat.drug_uses|safe}}
 	<span class="sub_source">
-	SOURCE: National Health Services
+	SOURCE: National Health Service
 	</span>
 	</div>
 </div>
@@ -123,7 +123,7 @@ var map_url = "{% static 'rx/image/map-uk.png' %}",
 	<div class="lab_pad">
 	{{drug_stat.drug_warnings|safe|linebreaks}}
 	<span class="sub_source">
-		SOURCE: National Health Services
+		SOURCE: National Health Service
 	</span>
 	</div>
 </div>
@@ -272,7 +272,7 @@ var map_url = "{% static 'rx/image/map-uk.png' %}",
 
 
 </div>
-
-<img style="width: 100px; float:left;" src="{% static 'rx/image/blue pills.png' %}">
+<!-- 
+<img style="width: 100px; float:left;" src="{% static 'rx/image/blue pills.png' %}"> -->
 
 {% endblock %}
