--- a/prescript/templates/rx/drug.html
+++ b/prescript/templates/rx/drug.html
@@ -191,7 +191,7 @@ var map_url = "{% static 'rx/image/map-uk.png' %}",
 
 
 <div id='popular'>
-<h5>Most Common Presentation</h5>
+<h5>Most Common Prescription</h5>
 	<div class="lab_pad">
 	{{drug_stat.nir_top_present|title}}
 	<br>
